# json-to-prompt

./: .gitignore  README.md  prompt.txt  pyproject.toml
json_to_prompt/: __init__.py  json_to_prompt.py  logger.py
tests/: example.json  test_json_to_prompt.py
