[project]
name = "json-to-prompt"
version = "0.1.0"
description = "Convert JSON/dicts into formatted prompt text."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Joe Gasewicz", email = "joegasewicz@gmail.com" }
]
keywords = ["json", "prompt", "llm", "utilities"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Text Processing",
  "Typing :: Typed"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8,<10"
]

[project.urls]
Homepage = "https://github.com/joegasewicz/json-to-prompt"
Repository = "https://github.com/joegasewicz/json-to-prompt"
Issues = "https://github.com/joegasewicz/json-to-prompt/issues"

[tool.poetry]
packages = [{ include = "json_to_prompt", from = "." }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
